--- a/portifolio/styles/index.css
+++ b/portifolio/styles/index.css
@@ -90,6 +90,8 @@
 
 /* -----navbar----- */
 nav {
+  z-index: 999;
+  background: var(--primary-color);
   max-width: 1300px;
   width: 100%;
   height: 10vh;
@@ -104,13 +106,21 @@ nav {
       -ms-flex-align: center;
           align-items: center;
   padding: 0 30px;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
-@media screen and (min-width: 996px) {
+.fixed {
+  position: fixed;
+}
+
+@media screen and (min-width: 896px) {
   nav {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    position: static;
+    z-index: 1;
   }
 }
 
@@ -397,7 +407,6 @@ ul li a:hover {
 /* ---main--- */
 .main {
   min-height: 90vh;
-  /* padding: 50px 0 50px 0; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
